# sstcam-simulation

./: .gitignore  LICENSE  Makefile  README.md  call_flashers.py  design_notes.ipynb  environment.yml  pyproject.toml  schematic.pptx  setup.py
.github/workflows/: ci.yml  tests.yml
optimisation_studies/delayed_opct/: 1_define_cameras.py  1_time_behaviour.py  2_define_job.py  2_pulse_behaviour.py  3_submit_jobs.py  4_extract_performance.py  5_plot_performance.py  demonstrate_ac_coupling.py  demonstrate_pulse_shapes.py
optimisation_studies/neighbour_opct/: 1_define_cameras.py  2_define_job.py  2s_simulate_events.py  3_submit_jobs.py  3_summarise_runs.py  3s_summarise_runs.py  4_extract_performance.py  5_plot_performance.py  demonstration.ipynb
optimisation_studies/overvoltage/: 1_define_cameras.py  2_simulate_events.py  2s_simulate_events.py  3_summarise_runs.py  4_extract_performance.py  5_plot_performance.py  README.md
scratch/: README.md  call_flashers.py  efficiency_calculators.ipynb  extract_candidate_table.py  extract_photoelectrons_from_simtel.py  extract_sipm_candidate_table.py  plot_foldings.py  plot_sipm_candidate_performance.py  plot_window_candidate_performance.py  resolution_calculators.ipynb  rich_tracesim.py  shower_animation.ipynb
sstcam_simulation/: __init__.py  photoelectrons.py
tutorials/: 1_camera_definition.ipynb  2_photoelectron_source.ipynb  3_bias_scan.ipynb  3_event_aquisition.ipynb  4_bias_scan.ipynb  5_charge_resolution.ipynb  6_full_chain.ipynb  7_trigger_NNSuperpixelAboveThreshold.ipynb  8_realistic_cherenkov.ipynb
(+95 files in other folders)
